src/test/ui/resolve/issue-14254.stderr
error[E0425]: cannot find function `baz` in this scope
  --> $DIR/issue-14254.rs:29:9
   |
29 |         baz();
   |         ^^^ help: try: `self.baz`

error[E0425]: cannot find value `a` in this scope
  --> $DIR/issue-14254.rs:31:9
   |
31 |         a;
   |         ^ not found in this scope

error[E0425]: cannot find function `baz` in this scope
  --> $DIR/issue-14254.rs:38:9
   |
38 |         baz();
   |         ^^^ help: try: `self.baz`

error[E0425]: cannot find value `x` in this scope
  --> $DIR/issue-14254.rs:40:9
   |
40 |         x;
   |         ^ help: try: `self.x`

error[E0425]: cannot find value `y` in this scope
  --> $DIR/issue-14254.rs:42:9
   |
42 |         y;
   |         ^ help: try: `self.y`

error[E0425]: cannot find value `a` in this scope
  --> $DIR/issue-14254.rs:44:9
   |
44 |         a;
   |         ^ not found in this scope

error[E0425]: cannot find value `bah` in this scope
  --> $DIR/issue-14254.rs:46:9
   |
46 |         bah;
   |         ^^^ help: try: `Self::bah`

error[E0425]: cannot find value `b` in this scope
  --> $DIR/issue-14254.rs:48:9
   |
48 |         b;
   |         ^ not found in this scope

error[E0425]: cannot find function `baz` in this scope
  --> $DIR/issue-14254.rs:55:9
   |
55 |         baz();
   |         ^^^ help: try: `self.baz`

error[E0425]: cannot find value `x` in this scope
  --> $DIR/issue-14254.rs:57:9
   |
57 |         x;
   |         ^ help: try: `self.x`

error[E0425]: cannot find value `y` in this scope
  --> $DIR/issue-14254.rs:59:9
   |
59 |         y;
   |         ^ help: try: `self.y`

error[E0425]: cannot find value `a` in this scope
  --> $DIR/issue-14254.rs:61:9
   |
61 |         a;
   |         ^ not found in this scope

error[E0425]: cannot find value `bah` in this scope
  --> $DIR/issue-14254.rs:63:9
   |
63 |         bah;
   |         ^^^ help: try: `Self::bah`

error[E0425]: cannot find value `b` in this scope
  --> $DIR/issue-14254.rs:65:9
   |
65 |         b;
   |         ^ not found in this scope

error[E0425]: cannot find function `baz` in this scope
  --> $DIR/issue-14254.rs:72:9
   |
72 |         baz();
   |         ^^^ help: try: `self.baz`

error[E0425]: cannot find value `bah` in this scope
  --> $DIR/issue-14254.rs:74:9
   |
74 |         bah;
   |         ^^^ help: try: `Self::bah`

error[E0425]: cannot find function `baz` in this scope
  --> $DIR/issue-14254.rs:81:9
   |
81 |         baz();
   |         ^^^ help: try: `self.baz`

error[E0425]: cannot find value `bah` in this scope
  --> $DIR/issue-14254.rs:83:9
   |
83 |         bah;
   |         ^^^ help: try: `Self::bah`

error[E0425]: cannot find function `baz` in this scope
  --> $DIR/issue-14254.rs:90:9
   |
90 |         baz();
   |         ^^^ help: try: `self.baz`

error[E0425]: cannot find value `bah` in this scope
  --> $DIR/issue-14254.rs:92:9
   |
92 |         bah;
   |         ^^^ help: try: `Self::bah`

error[E0425]: cannot find function `baz` in this scope
  --> $DIR/issue-14254.rs:99:9
   |
99 |         baz();
   |         ^^^ help: try: `self.baz`

error[E0425]: cannot find value `bah` in this scope
   --> $DIR/issue-14254.rs:101:9
    |
101 |         bah;
    |         ^^^ help: try: `Self::bah`

error[E0425]: cannot find function `baz` in this scope
   --> $DIR/issue-14254.rs:108:9
    |
108 |         baz();
    |         ^^^ help: try: `self.baz`

error[E0425]: cannot find value `bah` in this scope
   --> $DIR/issue-14254.rs:110:9
    |
110 |         bah;
    |         ^^^ help: try: `Self::bah`

error[E0601]: main function not found

error: aborting due to 25 previous errors

